fix: Dropdown arrow alignment in expanded header

--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -203,7 +203,7 @@
 
 			& > a,
 			& > button {
-				display: block;
+				display: flex;
 			}
 		}
 
